# aria-ros

./: LICENSE  README.md
aria_demo/: CMakeLists.txt  package.xml
aria_demo/include/aria_demo/: PickAndPlace.h
aria_demo/src/: PickAndPlace.cpp  trajectory.cpp
aria_description/: CMakeLists.txt  package.xml  urdf.rviz
aria_description/config/: aria_v1_joint_names.yaml  aria_v2_joint_names.yaml
aria_description/launch/: display_arm.launch
aria_description/meshes/: Link_C2.STL  Link_C3.STL  Link_C4.STL  base_link.STL
aria_description/meshes/aria_v1/: Band_1.STL  Band_2.STL  Band_3.STL  Band_4.STL  Band_5.STL  Band_6.STL  C2.STL  C3.STL  C5.STL  C6.STL  Finger1+2.STL  Finger3.STL  Gripper.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_7(Finger).STL  Link_8(Finders).STL  base_link.STL
aria_description/meshes/aria_v2/: Band_1.STL  Band_2.STL  Band_3.STL  Band_4.STL  Band_5.STL  Band_6.STL  Finger_1.STL  Finger_2.STL  Finger_3.STL  Link_0.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7_1.STL  Link_7_2.STL  Link_7_3.STL  Link_7_Upper_finger.STL  Link_8_1.STL  Link_8_2.STL  Link_8_3.STL  Link_8_Lower_fingers.STL  Link_C5.STL  Link_C6.STL  Link_Griper.STL
aria_description/urdf/: aria_v1.urdf  aria_v1.urdf.xacro  aria_v1_transmission.xacro  aria_v2.urdf  aria_v2.urdf.xacro  aria_v2_transmission.xacro  common.gazebo.xacro
aria_driver/: CMakeLists.txt  package.xml
aria_driver/cmake/: FindAriaClient.cmake
aria_driver/config/: aria_v1_controllers.yaml  aria_v2_controllers.yaml
aria_driver/include/aria_driver/: arm_udp_frame.h  ros_control_udp.h  ros_udp.h  udp_socket.h
aria_driver/libraries/AriaClient/include/: AriaClient.h
aria_driver/nodes/: aria_ros_control_udp.cpp  aria_ros_udp.cpp
aria_driver/src/: ros_control_udp.cpp  ros_udp.cpp  udp_socket.cpp
aria_gazebo/: CMakeLists.txt  package.xml
aria_gazebo/config/: aria_v1_controllers.yaml
aria_gazebo/launch/: aria_gazebo.launch
aria_moveit/aria_v1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aria_moveit/aria_v1_moveit_config/config/: aria_v1_arm.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
aria_moveit/aria_v1_moveit_config/launch/: aria_v1_arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aria_moveit/aria_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aria_moveit/aria_v2_moveit_config/config/: aria_v2_arm.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aria_moveit/aria_v2_moveit_config/launch/: aria_v2_arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aria_startup/: CMakeLists.txt  package.xml
aria_startup/config/: connection_config.yaml
aria_startup/launch/: aria_startup.launch
