<?xml version="1.0"?>
<package format="2">
  <name>aria_gazebo</name>
  <version>0.0.1</version>
  <description>The aria_gazebo package</description>

  <maintainer email="p.jagiello@accrea.com">Piotr Jagiełło</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
